bppackaging/src/objects/SO_Payment_Role__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deductible_Status__c</fullName>
        <label>Deductible Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>SO Payment Roles</relationshipLabel>
        <relationshipName>SO_Payment_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <label>Variance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>SO Payment Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Deductible_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOPR-{0000000}</displayFormat>
        <label>SO Payment Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SO Payment Roles</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Customer</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deductible</fullName>
        <active>true</active>
        <description>Deductible</description>
        <label>Deductible</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Internal</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party</fullName>
        <active>true</active>
        <description>Third Party</description>
        <label>Third Party</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>